# coral

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start.bat
assets/: style.css
functions/: esp.py  rcs.py  trig.py
output/: offsets.json
utils/: config.py  entity.py  memory.py  mouse.py  offsets.py  player.py  renderer.py  structs.py  thread_manager.py  visuals.py
