[project]
name = "coral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "glfw>=2.10.0",
    "imgui>=2.0.0",
    "keyboard>=0.13.5",
    "pymem>=1.14.0",
    "pynput>=1.8.1",
    "pyopengl>=3.1.10",
    "pywin32>=311",
    "raylib-py>=5.5.0",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

[tool.ruff]
exclude = [".venv"]
respect-gitignore = true
line-length = 120
lint.ignore = [
    "F403"
]
